fix(user-card): remove gap, add mergin

--- a/src/app/shared/user-card/user-card.component.scss
+++ b/src/app/shared/user-card/user-card.component.scss
@@ -43,12 +43,12 @@
   &__actions {
     display: flex;
     align-items: center;
-    gap: 8px;
     justify-content: flex-end;
   }
   &__btn {
     background: $color-sub;
     color: #fff;
+    margin-left: 8px;
     &--submit {
       background: $color-main;
       color: #fff;
